--- a/wasm/style.css
+++ b/wasm/style.css
@@ -6,6 +6,7 @@ html,body{
 	color: white;
 	font-family: 'Allerta Stencil';font-size: 2vw;
 	margin: 0;
+	padding:0;
 
 }
 a{
@@ -35,6 +36,9 @@ a{
 	width: 100%;
 	height: 100%;
 	float: left;
+
+	font-family: 'Ubuntu Condensed';
+	font-size: 1.3vw;
 }
 canvas {
 	border: 0px none;
@@ -85,39 +89,6 @@ footer
 	align-items: stretch;
 	flex-direction: column;
 }
-.fdivsub
-{
-	width:auto;
-	height:auto;
-	display:flex;
-	justify-content: center;
-	align-items: stretch;
-	flex-direction: row;
-}
-.ffdiv
-{
-	width:100%;
-	text-align: center;
-	vertical-align: middle;
-}
-.ffdiv span
-{
-	display: inline-block;
-	vertical-align: middle;
-	line-height: normal;
-}
-.fdiv:nth-child(1) {
-	width:80%;
-}
-.fdiv:nth-child(2) {
-	width:100%;
-}
-
-.ffdiv img
-{
-	width:90%;
-	height:auto;
-}
 @media screen and (min-width: 700px) {
 	.pair
 	{
@@ -129,7 +100,7 @@ footer
 		height: 100%;
 	}
 	.playArea {
-		width: 32%;
+		width: 35%;
 		height: 100%;
 	}
 	footer
@@ -141,23 +112,6 @@ footer
 	{
 		margin-top: 1%;
 		margin-left: 1%;
-		flex-direction: row;
-	}
-	.fdiv:nth-child(1) {
-		width:30%;
-	}
-	.fdiv:nth-child(2) {
-		width:40%;
-	}
-	.ffdiv
-	{
-		width:20%;
-	}
-	.fdivsub
-	{
-		width:80%;
-		height:auto;
-		align-items: stretch;
 		flex-direction: row;
 	}
 }
