--- a/wasm/style.css
+++ b/wasm/style.css
@@ -33,10 +33,10 @@ a{
 	float: left;
 }
 #editor {
-	width: 100%;
+	width: 98%;
 	height: 100%;
 	float: left;
-
+	margin:1%;
 	font-family: 'Ubuntu Condensed';
 	font-size: 1.3vw;
 }
