--- a/wasm/style.css
+++ b/wasm/style.css
@@ -31,7 +31,7 @@ a{
 	z-index: 1000
 }
 .codeArea {
-	width: 100%;
+	width: 0%;
 	height:0%;
 	float: left;
 
@@ -42,14 +42,14 @@ a{
 	float: left;
 }
 #editor {
-	width: 100%;
-	height: 100%;
+	width: 0%;
+	height: 0%;
 	float: left;
 	font-family: 'Ubuntu Condensed';
 	font-size: 1.3vw;
 	overflow-y:scroll;
 }
-#screen { width: 100%; height: 100%; }
+.qtscreen { width: 100%; height: 100%; }
 figure
 {
 	width:100%;
@@ -72,8 +72,8 @@ center
 footer
 {
 	float:left;
-	width:100%;
-	height:5%;
+	width:0%;
+	height:0%;
 	background-color: #10141c;
 	font-size: 2vw;
 }
@@ -116,6 +116,7 @@ footer
 	footer
 	{
 		height:10%;
+		width:100%;
 		font-size: 1vw;
 	}
 	.fcont
@@ -123,5 +124,9 @@ footer
 		margin-top: 1%;
 		margin-left: 1%;
 		flex-direction: row;
+	}
+	#editor {
+		width: 100%;
+		height: 100%;
 	}
 }
